--- a/style.css
+++ b/style.css
@@ -29,14 +29,103 @@ padding-top: 8px;
     text-align:right;
     margin-right: 300px;
   float: right;
-  
+  margin-top: -300px;
 }
 #text{
     float: left;
     padding-right: 600px;
-   
+    margin-left: 210px; 
+    margin-top: 300px;
 }
 .text1{
    text-align: center;
    
+}
+.btn{
+    color: white;
+    background-color: black;
+    text-align: left;
+    margin-left: 80px;
+}
+#box1{
+    color: white;
+    background-color: maroon;
+    border: solid black;
+    margin-top: 650px;
+    margin-left: 100px;
+    margin-right: 750px;
+    padding-left: 20px;   
+}
+.pine{
+    height: 250px;
+    width: 140px;
+    margin-left: 280px;
+    margin-bottom: 20px;
+    margin-top: -170px;
+    
+}
+#box2{
+    color: white;
+    background-color: maroon;
+    border: solid black;
+    margin-top: -295px ;
+    margin-left: 700px;
+    margin-right: 130px;
+    padding-left: 20px;   
+}
+.btn2{
+    color: white;
+    background-color: black;
+    text-align: left;
+    margin-left: 80px;
+    height: 30px;
+    width: 120px;
+    text-align: center;
+}
+.end{
+    text-align: center;
+    text-decoration-style:solid;
+    text-underline-position: below;
+    text-decoration-line: underline;
+    font-family: cursive;
+}
+.pine2{
+    height: 180px;
+    width: 100px;
+}
+.b1{
+    background-color: rgba(128, 128, 128, 0.658);
+    margin-right: 1025px;
+    margin-left: 80px;
+    padding-left: 55px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.b2{
+    background-color: rgba(128, 128, 128, 0.658);
+    margin-right: 700px ;
+    margin-left: 415px  ; 
+    margin-top: -220px;
+    padding-left: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+}
+.b3{
+    background-color: rgba(128, 128, 128, 0.658);
+    margin-right: 380px;
+    margin-left: 735px;
+    margin-top: -220px;
+    padding-left: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.b4{
+    background-color: rgba(128, 128, 128, 0.658);
+    margin-right: 80px;
+    margin-left: 1050px;
+    margin-top: -225px;
+    padding-left: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
