--- a/style.css
+++ b/style.css
@@ -129,3 +129,12 @@ padding-top: 8px;
     padding-top: 20px;
     padding-bottom: 20px;
 }
+.feed{
+    height: 30px;
+    width: 500px;
+    text-align: center;
+    align-content: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
